--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@fontsource/lato": "^5.0.21",
     "@fontsource/outfit": "^5.0.13",
     "@fontsource/roboto": "^5.0.13",
+    "pdfjs-dist": "^3.4.120",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-pdf": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
