--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,23 +1,30 @@
 [
   {
-    "title": "Pnuematic Soft Actuator Test Stand",
-    "imageSrc": "projects/project.png",
-    "description": "Description coming soon...",
+    "title": "Pneumatic Soft Actuator Test Stand",
+    "imageSrc": "projects/controller.jpg",
+    "description": "Designed and built a modular soft actuator test stand for the MIT Fabrication-Integrated Design Lab. The stand is used for characterizing the motion, lifetime, and pressure limits of soft actuators in a highly controlled and repeatable manner. This project included development of a pneumatic PID control software system, capable of real-time pressure control up to 40 PSI with a 1 PSI deadband following customizable user-defined pressure profiles.",
     "skills": ["Mechanical Design", "Pneumatics", "PID Control", "Arduino", "C++"],
     "info": "https://github.com/Comiskey/soft-actuator-controller"
   },
   {
+    "title": "Thermal Acceleration of Soft-soft Interface Manufacturing",
+    "imageSrc": "projects/peel.png",
+    "description": "Investigated the effects of thermal acceleration on the peel strength of soft-soft interfaces. Successfully demonstrated that thermal acceleration can be used to reduce the manufacturing time of common soft robotic components by up to a factor of 55x withhout adverse affects on material properties.",
+    "skills": ["Experimental Design", "Materials Science", "Statistical Analysis", "Mold Design"],
+    "info": "/pdfs/peel.pdf"
+  },
+  {
     "title": "Mass Production of Custom Injection-Molded Yo-yo's",
     "imageSrc": "projects/buzz.jpeg",
-    "description": "Lead a team of 5 peers over a semester's time to manufacture injection & thermoforming molds for the production of 50+ custom designed Buzz Lightyear yo-yo's, featuring a custom press-fit between the two halves of the yo-yo.",
+    "description": "Led a team of 5 peers over a semester's time to manufacture injection & thermoforming molds for the production of 50+ custom designed Buzz Lightyear yo-yo's, featuring a custom press-fit between the two halves of the yo-yo.",
     "skills": ["Design For Manufacturing", "Fusion 360", "Injection Molding", "CNC Milling", "Thermoforming"],
-    "info": "#"
+    "info": "/pdfs/yoyos.pdf"
   },
   {
     "title": "Autonomous Robot Design Competition",
-    "imageSrc":  "projects/robot.jpg",
-    "description": "Placing 6th out of 138 students, this autonomous robot was the culmination of a semester of design and fabrication work, which was informed by multiple custom-built MATLAB simulations to determine necssary hardware specifications.",
+    "imageSrc": "projects/robot.jpg",
+    "description": "Placing 6th out of 138 students, this autonomous robot was the culmination of a semester of design and fabrication work, which was informed by multiple custom-built MATLAB simulations to determine necessary hardware specifications.",
     "skills": ["SolidWorks", "MATLAB", "CNC Milling", "Lathe"],
-    "info": "#"
+    "info": "/pdfs/robot.pdf"
   }
 ]
