--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -14,7 +14,7 @@
     "info": "/pdfs/peel.pdf"
   },
   {
-    "title": "Mass Production of Custom Injection-Molded Yo-yo's",
+    "title": "Mass Production of Custom Injection-Molded Yo-yos",
     "imageSrc": "projects/buzz.jpeg",
     "description": "Led a team of 5 peers over a semester's time to manufacture injection & thermoforming molds for the production of 50+ custom designed Buzz Lightyear yo-yos, featuring a custom press-fit between the two halves of the yo-yo.",
     "skills": ["Design For Manufacturing", "Fusion 360", "Injection Molding", "CNC Milling", "Thermoforming"],
